<resources>
    <string name="api_error">Произошла неизвестная ошибка.</string>
    <string name="api_error_network">Произошла ошибка сети.</string>
    <string name="api_error_update">Идет обновление игры.</string>
    <string name="app_name">The Tale Client</string>
    <string name="app_description">The Tale Client by Hamster</string>
    <string name="app_about">Android-клиент для многопользовательской zero-player RPG &lt;a href=\"http://the-tale.org\"&gt;Сказка&lt;/a&gt;.
        &lt;br&gt;&lt;br&gt;Версия: %1$s&lt;br&gt;&lt;br&gt;Автор: &lt;a href=\"http://the-tale.org/accounts/9297\"&gt;Hamster&lt;/a&gt;</string>
    <string name="app_widget_small">The Tale Client: Состояние героя (1x1)</string>
    <string name="app_widget_medium">The Tale Client: Основная информация (2x1)</string>
    <string name="app_widget_large">The Tale Client: Герой и помощь (3x1)</string>
    <string name="app_widget_huge">The Tale Client: Герой, спутник, помощь и действие (4x2)</string>
    <string name="app_widget_not_updated">Войдите в приложение для запуска автоматического обновления виджета</string>
    <string name="action_read_aloud">Читать журнал</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_retry">Повторить попытку</string>
    <string name="artifact_equipment_type">экипировка</string>
    <string name="artifact_power_physical">физическая сила</string>
    <string name="artifact_power_magical">магическая сила</string>
    <string name="artifact_integrity">целостность</string>
    <string name="artifact_integrity_value">%1$.2f%% (%2$d из %3$d)</string>
    <string name="artifact_rating">полезность</string>
    <string name="chat_copy">Копировать</string>
    <string name="chat_error">Произошла ошибка при обновлении чата. Пожалуйста, обновите страницу.</string>
    <string name="chat_error_send">Произошла ошибка при отправке сообщения. Попробуйте еще раз.</string>
    <string name="chat_message_hr">&lt;hr&gt;</string>
    <string name="chat_quote">Цитировать</string>
    <string name="chat_send">Отправить</string>
    <string name="common_dialog_attention_title">Внимание</string>
    <string name="common_error">Произошла неизвестная ошибка. Попробуйте еще раз.</string>
    <string name="common_error_hint">Ошибка</string>
    <string name="common_error_short">Произошла неизвестная ошибка.</string>
    <string name="common_item_count">" (x%d)"</string>
    <string name="common_loading">Загрузка&#8230;</string>
    <string name="drawer_dialog_profile_item_keeper">Профиль хранителя</string>
    <string name="drawer_dialog_profile_item_hero">Профиль героя</string>
    <string name="drawer_title_about">О приложении</string>
    <string name="drawer_title_chat">Чат</string>
    <string name="drawer_title_close">Закрыть меню</string>
    <string name="drawer_title_find_player">Поиск игрока</string>
    <string name="drawer_title_game">Игра</string>
    <string name="drawer_title_logout">Выход</string>
    <string name="drawer_title_map">Карта</string>
    <string name="drawer_title_open">Открыть меню</string>
    <string name="drawer_title_settings">Настройки</string>
    <string name="drawer_title_site">Перейти к сайту</string>
    <string name="game_bag_drop_item">Выбросить предмет</string>
    <string name="game_bag_drop_item_confirmation">Из рюкзака будет выброшен самый ненужный предмет.\nПродолжить?</string>
    <string name="game_bag_effects">(Все эффекты)</string>
    <string name="game_bag_effects_title">Все эффекты экипировки</string>
    <string name="game_card_take">Взять карту!</string>
    <string name="game_card_take_result">Карта взята</string>
    <string name="game_card_tradable">Может быть продана на рынке</string>
    <string name="game_card_use">Использование карты</string>
    <string name="game_card_use_action">Использовать</string>
    <string name="game_card_use_building">Советник, которому принадлежит здание</string>
    <string name="game_card_use_no_buildings">Нет советников со зданиями</string>
    <string name="game_card_use_person">Советник</string>
    <string name="game_card_use_place">Город</string>
    <string name="game_card_use_progress">Использование карты&#8230;</string>
    <string name="game_cards_combine">Объединить карты</string>
    <string name="game_cards_combine_cancel">Отмена</string>
    <string name="game_cards_combine_confirm">Объединить</string>
    <string name="game_cards_combine_progress">Объединение карт&#8230;</string>
    <string name="game_cards_combine_result">Карты объединены</string>
    <string name="game_cards_unavailable_foreign">Просмотр чужих карт судьбы недоступен</string>
    <string name="game_companion_absent">Нет спутника</string>
    <string name="game_companion_feature_coherence">Слаженность %1$d</string>
    <string name="game_companion_feature_initial">Начальные особенности</string>
    <string name="game_companion_param_rarity">Редкость</string>
    <string name="game_companion_param_type">Тип</string>
    <string name="game_companion_param_archetype">Архетип</string>
    <string name="game_companion_param_dedication">Самоотверженность</string>
    <string name="game_companion_param_health">Здоровье</string>
    <string name="game_companion_tab_params">Параметры</string>
    <string name="game_companion_tab_features">Особенности</string>
    <string name="game_companion_tab_description">Описание</string>
    <string name="game_action_time">Осталось: %1$d ч %2$d мин</string>
    <string name="game_action_time_short">Осталось: %1$d мин</string>
    <string name="game_action_time_approximate">Осталось: примерно %1$d мин %2$d с</string>
    <string name="game_action_time_approximate_short">Осталось: примерно %1$d с</string>
    <string name="game_additional_info">Дополнительная информация</string>
    <string name="game_additional_info_account_id">ID игрока</string>
    <string name="game_additional_info_destiny_points">Очки способностей</string>
    <string name="game_additional_info_honor">Характер, честь</string>
    <string name="game_additional_info_initiative">Инициатива</string>
    <string name="game_additional_info_last_visit">Был в игре</string>
    <string name="game_additional_info_move_speed">Скорость движения</string>
    <string name="game_additional_info_new_messages">Новых сообщений</string>
    <string name="game_additional_info_peacefulness">Характер, миролюбие</string>
    <string name="game_affect_true">Влияет на игру</string>
    <string name="game_affect_false">Не влияет на игру</string>
    <string name="game_boss_fight">" \u2605"</string>
    <string name="game_find_player_progress">Поиск игроков</string>
    <string name="game_help">Помочь</string>
    <string name="game_help_progress_to_next_card">%1$d / %2$d</string>
    <string name="game_help_to_next_card">Помощи до новой карты</string>
    <string name="game_info_health">Здоровье</string>
    <string name="game_info_experience">Опыт</string>
    <string name="game_info_energy">Энергия</string>
    <string name="game_lvlup">\u2b06</string>
    <string name="game_lvlup_dialog_title">Новые способности</string>
    <string name="game_lvlup_dialog_message">Доступно способностей: %d.\nЧтобы выбрать новую способность, перейдите на сайт в профиль героя.</string>
    <string name="game_lvlup_dialog_message_foreign">Доступно способностей: %d.</string>
    <string name="game_not_authorized">Отсутствует авторизация в игре. Пожалуйста, войдите в игру заново.</string>
    <string name="game_quest_choice">Выбор в квесте</string>
    <string name="game_quest_choice_confirmation">В квесте \"&lt;b&gt;%1$s&lt;/b&gt;\" будет выбран путь \"&lt;b&gt;%2$s&lt;/b&gt;\".\nПродолжить?</string>
    <string name="game_read_aloud_caption">Чтение вслух</string>
    <string name="game_read_aloud_confirmation">Для чтения текста вслух необходим языковой пакет русского языка.
        Если он не установлен на этом устройстве, пакет будет скачан.
        Это может использовать большое количество интернет-трафика.\nПродолжить?</string>
    <string name="game_read_aloud_error_init">Произошла неизвестная ошибка при инициализации голосового движка.</string>
    <string name="game_read_aloud_error_not_supported">Языковой пакет русского языка не поддерживается текущим голосовым движком.</string>
    <string name="game_read_aloud_wait_message">Инициализация голосового движка&#8230;</string>
    <string name="game_might_help_critical_chance">Критический эффект помощи: %.2f%%</string>
    <string name="game_might_pvp_effectiveness_bonus">Бонус к эффективности в PvP: %.2f%%</string>
    <string name="game_title_bag">Рюкзак (%1$s/%2$s)</string>
    <string name="game_title_cards">Карты</string>
    <string name="game_title_diary">Дневник</string>
    <string name="game_title_equipment">Экипировка</string>
    <string name="game_title_info">Игра</string>
    <string name="game_title_might">Могущество</string>
    <string name="game_title_profile">Профиль</string>
    <string name="game_title_quests">Задания</string>
    <string name="find_player_history">История просмотров</string>
    <string name="find_player_history_empty">История просмотров пуста</string>
    <string name="find_player_info">Хранитель &lt;b&gt;%1$s&lt;/b&gt; и %2$s</string>
    <string name="find_player_info_short">Хранитель &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="find_player_not_found">Игроки не найдены</string>
    <string name="find_player_query_hint">Первые символы ника</string>
    <string name="find_player_reset">Вернуться к своему герою</string>
    <string name="find_player_too_many">Найдено более %1$d игроков. Продолжить?</string>
    <string name="login_action_login">Войти</string>
    <string name="login_action_password_remind">Забыли пароль?</string>
    <string name="login_action_registration">Создать героя</string>
    <string name="login_action_authorization_site">Войти через сайт</string>
    <string name="login_text_login">Email</string>
    <string name="login_text_password">Пароль</string>
    <string name="map_find_hero">Найти героя</string>
    <string name="map_find_place">Найти город</string>
    <string name="map_modification_caption">Вид карты</string>
    <string name="map_save">Сохранить карту</string>
    <string name="map_style_caption">Карта</string>
    <string name="profile_achievement_points">Очки достижений</string>
    <string name="profile_collection_items_count">Предметов в коллекции</string>
    <string name="profile_ratings">Рейтинги</string>
    <string name="profile_ratings_description">Положение игрока в рейтингах</string>
    <string name="profile_places_history">Политика</string>
    <string name="profile_places_history_description">Города, которым герой помогает чаще</string>
    <string name="profile_referrals_count">Последователи</string>
    <string name="settings_notification">Уведомления</string>
    <string name="settings_key_notification_death">KEY_SETTINGS_NOTIFICATION_DEATH</string>
    <string name="settings_key_notification_idleness">KEY_SETTINGS_NOTIFICATION_IDLENESS</string>
    <string name="settings_key_notification_health">KEY_SETTINGS_NOTIFICATION_HEALTH</string>
    <string name="settings_key_notification_health_threshold">KEY_SETTINGS_NOTIFICATION_HEALTH_THRESHOLD</string>
    <string name="settings_key_notification_energy">KEY_SETTINGS_NOTIFICATION_ENERGY</string>
    <string name="settings_key_notification_energy_threshold">KEY_SETTINGS_NOTIFICATION_ENERGY_THRESHOLD</string>
    <string name="settings_title_notification_death">Смерть героя</string>
    <string name="settings_title_notification_idleness">Бездействие героя</string>
    <string name="settings_title_notification_health">Низкое здоровье</string>
    <string name="settings_title_notification_health_threshold">Уровень здоровья</string>
    <string name="settings_title_notification_energy">Накопившаяся энергия</string>
    <string name="settings_title_notification_energy_threshold">Уровень энергии</string>
</resources>