<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="@string/drawer_title_map"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_map_style"
                android:title="@string/map_style_caption"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_map_find_place"
                android:title="@string/map_find_place"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_map_find_hero"
                android:title="@string/map_find_hero"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_map_modification"
                android:title="@string/map_modification_caption"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_map_save"
                android:title="@string/map_save"
                app:showAsAction="never"/>

        </menu>

    </item>

    <item
        android:id="@id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>

</menu>
