<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        
        <TextView
            android:id="@+id/login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/common_error"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/login_error_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/common_error"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/login_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/login_text_login"/>

        <TextView
            android:id="@+id/login_error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/common_error"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/login_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/login_text_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_action_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_action_login"/>

        <TextView
            android:id="@+id/login_action_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            style="?android:attr/textAppearanceMedium"
            android:textColor="@color/common_link"
            android:text="@string/login_action_registration"/>

        <TextView
            android:id="@+id/login_action_password_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            style="?android:attr/textAppearanceMedium"
            android:textColor="@color/common_link"
            android:text="@string/login_action_password_remind"/>

    </LinearLayout>

</RelativeLayout>